--- a/orderService/src/main/resources/bootstrap.yml
+++ b/orderService/src/main/resources/bootstrap.yml
@@ -15,12 +15,14 @@ spring:
 
 
 eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://172.19.141.91:8761/eureka
   instance:
     preferIpAddress: true
-    ip-address: 172.19.141.91
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8761/eureka
 
 #  cloud:
 #    config:
