--- a/payPalService/src/main/resources/bootstrap.yml
+++ b/payPalService/src/main/resources/bootstrap.yml
@@ -13,14 +13,15 @@ spring:
         enabled: true
         service-id: configserver
 
-
 eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://172.19.141.91:8761/eureka
   instance:
     preferIpAddress: true
-    ip-address: 172.19.141.91
+    hostname: eureka-0
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://eureka-0.eureka.default.svc.cluster.local:8761/eureka
 
 
 #  cloud:
